--- a/.deliver/config
+++ b/.deliver/config
@@ -39,7 +39,8 @@ pre_erlang_clean_compile() {
     mkdir -p priv/static # required by the phoenix.digest task
     npm install 
 
-    ./node_modules/brunch/bin/brunch build --production 
+    #./node_modules/brunch/bin/brunch build --production 
+    brunch build --production 
 
     # run your custom task
     APP='$APP' MIX_ENV='$TARGET_MIX_ENV' $MIX_CMD phoenix.digest $SILENCE
